refactor asdf uri and tag syntax (#431)
* replace tag syntax

* try fix legacy tag_mapping

* add custom make_yaml_tag implementation

* use format tag for wx_shape instance testing

* fix custom tag building for groove types

* update to new uri syntax

* update time schema

* update doc

* add script to create initial manifest

* fix notebooks

* update CHANGELOG.md

--- a/weldx/asdf/schemas/weldx.bam.de/weldx/aws/design/weldment-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/aws/design/weldment-1.0.0.yaml
@@ -1,8 +1,8 @@
 %YAML 1.1
 ---
 $schema: "http://stsci.edu/schemas/yaml-schema/draft-01"
-id: "http://weldx.bam.de/schemas/weldx/aws/design/weldment-1.0.0"
-tag: "tag:weldx.bam.de:weldx/aws/design/weldment-1.0.0"
+id: "asdf://weldx.bam.de/weldx/schemas/aws/design/weldment-1.0.0"
+tag: "asdf://weldx.bam.de/weldx/tags/aws/design/weldment-1.0.0"
 
 title: |
   <TODO DESCRIPTION>
