--- a/weldx/asdf/schemas/weldx.bam.de/weldx/core/transformations/rotation-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/core/transformations/rotation-1.0.0.yaml
@@ -1,8 +1,8 @@
 %YAML 1.1
 ---
 $schema: "http://stsci.edu/schemas/yaml-schema/draft-01"
-id: "http://weldx.bam.de/schemas/weldx/core/transformations/rotation-1.0.0"
-tag: "tag:weldx.bam.de:weldx/core/transformations/rotation-1.0.0"
+id: "asdf://weldx.bam.de/weldx/schemas/core/transformations/rotation-1.0.0"
+tag: "asdf://weldx.bam.de/weldx/tags/core/transformations/rotation-1.0.0"
 
 title: |
   Schema to describe a 3D rotation.
@@ -13,7 +13,7 @@ examples:
   -
     - A "xyz" euler rotation with 10, 20 and 60 degree angles as euler representation.
     - |
-      !<tag:weldx.bam.de:weldx/core/transformations/rotation-1.0.0>
+      !<asdf://weldx.bam.de/weldx/tags/core/transformations/rotation-1.0.0>
         angles: !unit/quantity-1.1.0
           unit: degree
           value: !core/ndarray-1.0.0
@@ -24,7 +24,7 @@ examples:
   -
     - The quaternion rotation representation
     - |
-      !<tag:weldx.bam.de:weldx/core/transformations/rotation-1.0.0>
+      !<asdf://weldx.bam.de/weldx/tags/core/transformations/rotation-1.0.0>
         quaternions: !core/ndarray-1.0.0
           data: [-0.012161306594124677, 0.19272730326230897, 0.4774233251326969, 0.8571903276509837]
           datatype: float64
@@ -32,7 +32,7 @@ examples:
   -
     - The matrix rotation representation.
     - |
-      !<tag:weldx.bam.de:weldx/core/transformations/rotation-1.0.0>
+      !<asdf://weldx.bam.de/weldx/tags/core/transformations/rotation-1.0.0>
         matrix: !core/ndarray-1.0.0
           data:
           - [0.46984631039295427, -0.8231729446455007, 0.3187957775971679]
@@ -43,7 +43,7 @@ examples:
   -
     - The rotation vector representation.
     - |
-      !<tag:weldx.bam.de:weldx/core/transformations/rotation-1.0.0>
+      !<asdf://weldx.bam.de/weldx/tags/core/transformations/rotation-1.0.0>
         rotvec: !core/ndarray-1.0.0
           data: [-0.02555091083053722, 0.404920154109444, 1.0030666289407963]
           datatype: float64
