--- a/weldx/asdf/schemas/weldx.bam.de/weldx/measurement/signal_transformation-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/measurement/signal_transformation-1.0.0.yaml
@@ -1,8 +1,8 @@
 %YAML 1.1
 ---
 $schema: "http://stsci.edu/schemas/yaml-schema/draft-01"
-id: "http://weldx.bam.de/schemas/weldx/measurement/signal_transformation-1.0.0"
-tag: "tag:weldx.bam.de:weldx/measurement/signal_transformation-1.0.0"
+id: "asdf://weldx.bam.de/weldx/schemas/measurement/signal_transformation-1.0.0"
+tag: "asdf://weldx.bam.de/weldx/tags/measurement/signal_transformation-1.0.0"
 
 title: |
   Signal transformation step.
@@ -13,19 +13,19 @@ examples:
   -
     - A simple analog-digital conversion without a function that affects the signal values
     - |
-      !<tag:weldx.bam.de:weldx/measurement/signal_transformation-1.0.0>
+      !<asdf://weldx.bam.de/weldx/tags/measurement/signal_transformation-1.0.0>
         name: AD conversion
-        error: !<tag:weldx.bam.de:weldx/measurement/error-1.0.0>
+        error: !<asdf://weldx.bam.de/weldx/tags/measurement/error-1.0.0>
           deviation: !unit/quantity-1.1.0 { unit: percent, value: 0.5 }
         type_transformation: AD
   -
     - A transformation that calculates amperes based on volts using a given function
     - |
-      !<tag:weldx.bam.de:weldx/measurement/signal_transformation-1.0.0>
+      !<asdf://weldx.bam.de/weldx/tags/measurement/signal_transformation-1.0.0>
         name: Volt-Ampere-Conversion
-        error: !<tag:weldx.bam.de:weldx/measurement/error-1.0.0>
+        error: !<asdf://weldx.bam.de/weldx/tags/measurement/error-1.0.0>
           deviation: !unit/quantity-1.1.0 { unit: percent, value: 1.5 }
-        func: !<tag:weldx.bam.de:weldx/core/mathematical_expression-1.0.0>
+        func: !<asdf://weldx.bam.de/weldx/tags/core/mathematical_expression-1.0.0>
           expression: a*x + b
           parameters:
             a: !unit/quantity-1.1.0 { unit: ampere / volt, value: 3 }
@@ -40,11 +40,11 @@ properties:
   error:
     description: |
       The error caused by the transformation
-    tag: "tag:weldx.bam.de:weldx/measurement/error-1.0.0"
+    tag: "asdf://weldx.bam.de/weldx/tags/measurement/error-1.0.0"
   func:
     description: |
       A mathematical expression that describes the relation between the values of the output and input signal
-    tag: "tag:weldx.bam.de:weldx/core/mathematical_expression-1.0.0"
+    tag: "asdf://weldx.bam.de/weldx/tags/core/mathematical_expression-1.0.0"
   type_transformation:
     description: |
       A string of length 2 containing an arbitrary combination of the letters A (for analog) and D (for digital). The
