--- a/weldx/asdf/schemas/weldx.bam.de/weldx/aws/process/gas_component-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/aws/process/gas_component-1.0.0.yaml
@@ -1,8 +1,8 @@
 %YAML 1.1
 ---
 $schema: "http://stsci.edu/schemas/yaml-schema/draft-01"
-id: "http://weldx.bam.de/schemas/weldx/aws/process/gas_component-1.0.0"
-tag: "tag:weldx.bam.de:weldx/aws/process/gas_component-1.0.0"
+id: "asdf://weldx.bam.de/weldx/schemas/aws/process/gas_component-1.0.0"
+tag: "asdf://weldx.bam.de/weldx/tags/aws/process/gas_component-1.0.0"
 
 title: |
   Shielding gas component
@@ -13,7 +13,7 @@ examples:
   -
     - A single argon gas component
     - |
-      !<tag:weldx.bam.de:weldx/aws/process/gas_component-1.0.0>
+      !<asdf://weldx.bam.de/weldx/tags/aws/process/gas_component-1.0.0>
         gas_chemical_name: argon
         gas_percentage: !unit/quantity-1.1.0 {unit: percent, value: 82}
 
