--- a/weldx/asdf/schemas/weldx.bam.de/weldx/core/dataset-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/core/dataset-1.0.0.yaml
@@ -1,8 +1,8 @@
 %YAML 1.1
 ---
 $schema: "http://stsci.edu/schemas/yaml-schema/draft-01"
-id: "http://weldx.bam.de/schemas/weldx/core/dataset-1.0.0"
-tag: "tag:weldx.bam.de:weldx/core/dataset-1.0.0"
+id: "asdf://weldx.bam.de/weldx/schemas/core/dataset-1.0.0"
+tag: "asdf://weldx.bam.de/weldx/tags/core/dataset-1.0.0"
 
 title: |
   Schema that describes a dataset
@@ -21,19 +21,19 @@ properties:
       An array of dimensions.
     type: array
     items:
-      tag: "tag:weldx.bam.de:weldx/core/dimension-1.0.0"
+      tag: "asdf://weldx.bam.de/weldx/tags/core/dimension-1.0.0"
   coordinates:
     description: |
       An array of variables that represent coordinates.
     type: array
     items:
-      tag: "tag:weldx.bam.de:weldx/core/variable-1.0.0"
+      tag: "asdf://weldx.bam.de/weldx/tags/core/variable-1.0.0"
   variables:
     description: |
       An array of variables.
     type: array
     items:
-      tag: "tag:weldx.bam.de:weldx/core/variable-1.0.0"
+      tag: "asdf://weldx.bam.de/weldx/tags/core/variable-1.0.0"
 
 required: [dimensions, coordinates, variables]
 propertyOrder: [attributes, dimensions, coordinates, variables]
