--- a/weldx/asdf/schemas/weldx.bam.de/weldx/core/transformations/coordinate_system_hierarchy_subsystem-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/core/transformations/coordinate_system_hierarchy_subsystem-1.0.0.yaml
@@ -1,8 +1,8 @@
 %YAML 1.1
 ---
 $schema: "http://stsci.edu/schemas/yaml-schema/draft-01"
-id: "http://weldx.bam.de/schemas/weldx/core/transformations/coordinate_system_hierarchy_subsystem-1.0.0"
-tag: "tag:weldx.bam.de:weldx/core/transformations/coordinate_system_hierarchy_subsystem-1.0.0"
+id: "asdf://weldx.bam.de/weldx/schemas/core/transformations/coordinate_system_hierarchy_subsystem-1.0.0"
+tag: "asdf://weldx.bam.de/weldx/tags/core/transformations/coordinate_system_hierarchy_subsystem-1.0.0"
 
 title: |
   Schema that describes a subsystem of a local coordinate system hierarchy
@@ -13,7 +13,7 @@ examples:
   -
     - A subsystem assignment of the coordinate systems workpiece, user_frame, T1 and T2.
     - |
-      !<tag:weldx.bam.de:weldx/core/transformations/coordinate_system_hierarchy_subsystem-1.0.0>
+      !<asdf://weldx.bam.de/weldx/tags/core/transformations/coordinate_system_hierarchy_subsystem-1.0.0>
         name: Subsystem T
         parent_system: Base CSM
         root_cs: workpiece
@@ -35,7 +35,7 @@ properties:
   reference_time:
     description: |
       A timestamp that serves as reference point for all attached coordinate systems.
-    tag: "tag:weldx.bam.de:weldx/time/timestamp-1.0.0"
+    tag: "asdf://weldx.bam.de/weldx/tags/time/timestamp-1.0.0"
 
   root_cs:
     description: |
