--- a/weldx/asdf/schemas/weldx.bam.de/weldx/core/transformations/local_coordinate_system-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/core/transformations/local_coordinate_system-1.0.0.yaml
@@ -1,8 +1,8 @@
 %YAML 1.1
 ---
 $schema: "http://stsci.edu/schemas/yaml-schema/draft-01"
-id: "http://weldx.bam.de/schemas/weldx/core/transformations/local_coordinate_system-1.0.0"
-tag: "tag:weldx.bam.de:weldx/core/transformations/local_coordinate_system-1.0.0"
+id: "asdf://weldx.bam.de/weldx/schemas/core/transformations/local_coordinate_system-1.0.0"
+tag: "asdf://weldx.bam.de/weldx/tags/core/transformations/local_coordinate_system-1.0.0"
 
 title: |
   Schema that describes a local coordinate system
@@ -13,8 +13,8 @@ examples:
   -
     - A constant transformation describing a translation of 1 mm into the z direction
     - |
-      !<tag:weldx.bam.de:weldx/core/transformations/local_coordinate_system-1.0.0>
-        coordinates: !<tag:weldx.bam.de:weldx/core/variable-1.0.0>
+      !<asdf://weldx.bam.de/weldx/tags/core/transformations/local_coordinate_system-1.0.0>
+        coordinates: !<asdf://weldx.bam.de/weldx/tags/core/variable-1.0.0>
           name: coordinates
           dimensions: [c]
           dtype: <f8
@@ -27,17 +27,17 @@ examples:
       A time dependent transformation describing a linear movement from 5 mm to 295 mm
       over 20 seconds along the x-axis direction.
     - |
-      !<tag:weldx.bam.de:weldx/core/transformations/local_coordinate_system-1.0.0>
-        time: !<tag:weldx.bam.de:weldx/time/timedeltaindex-1.0.0>
+      !<asdf://weldx.bam.de/weldx/tags/core/transformations/local_coordinate_system-1.0.0>
+        time: !<asdf://weldx.bam.de/weldx/tags/time/timedeltaindex-1.0.0>
           values: !core/ndarray-1.0.0
             data: [0, 20000000000]
             datatype: int64
             shape: [2]
-          start: !<tag:weldx.bam.de:weldx/time/timedelta-1.0.0> {value: P0DT0H0M0S}
-          end: !<tag:weldx.bam.de:weldx/time/timedelta-1.0.0> {value: P0DT0H0M20S}
-          min: !<tag:weldx.bam.de:weldx/time/timedelta-1.0.0> {value: P0DT0H0M0S}
-          max: !<tag:weldx.bam.de:weldx/time/timedelta-1.0.0> {value: P0DT0H0M20S}
-        coordinates: !<tag:weldx.bam.de:weldx/core/variable-1.0.0>
+          start: !<asdf://weldx.bam.de/weldx/tags/time/timedelta-1.0.0> {value: P0DT0H0M0S}
+          end: !<asdf://weldx.bam.de/weldx/tags/time/timedelta-1.0.0> {value: P0DT0H0M20S}
+          min: !<asdf://weldx.bam.de/weldx/tags/time/timedelta-1.0.0> {value: P0DT0H0M0S}
+          max: !<asdf://weldx.bam.de/weldx/tags/time/timedelta-1.0.0> {value: P0DT0H0M20S}
+        coordinates: !<asdf://weldx.bam.de/weldx/tags/core/variable-1.0.0>
           name: coordinates
           dimensions: [time, c]
           dtype: <f8
@@ -50,8 +50,8 @@ examples:
   -
     - A static transformation describing an euler rotation of 45 degree around the x-axis.
     - |
-      !<tag:weldx.bam.de:weldx/core/transformations/local_coordinate_system-1.0.0>
-        orientations: !<tag:weldx.bam.de:weldx/core/variable-1.0.0>
+      !<asdf://weldx.bam.de/weldx/tags/core/transformations/local_coordinate_system-1.0.0>
+        orientations: !<asdf://weldx.bam.de/weldx/tags/core/variable-1.0.0>
           name: orientations
           dimensions: [c, v]
           dtype: <f8
@@ -67,17 +67,17 @@ examples:
       A time dependent transformation describing an euler rotation around the y-axis from 0 degree to 120 degree
       over 20 seconds.
     - |
-      !<tag:weldx.bam.de:weldx/core/transformations/local_coordinate_system-1.0.0>
-        time: !<tag:weldx.bam.de:weldx/time/timedeltaindex-1.0.0>
+      !<asdf://weldx.bam.de/weldx/tags/core/transformations/local_coordinate_system-1.0.0>
+        time: !<asdf://weldx.bam.de/weldx/tags/time/timedeltaindex-1.0.0>
           values: !core/ndarray-1.0.0
             data: [0, 20000000000]
             datatype: int64
             shape: [2]
-          start: !<tag:weldx.bam.de:weldx/time/timedelta-1.0.0> {value: P0DT0H0M0S}
-          end: !<tag:weldx.bam.de:weldx/time/timedelta-1.0.0> {value: P0DT0H0M20S}
-          min: !<tag:weldx.bam.de:weldx/time/timedelta-1.0.0> {value: P0DT0H0M0S}
-          max: !<tag:weldx.bam.de:weldx/time/timedelta-1.0.0> {value: P0DT0H0M20S}
-        orientations: !<tag:weldx.bam.de:weldx/core/variable-1.0.0>
+          start: !<asdf://weldx.bam.de/weldx/tags/time/timedelta-1.0.0> {value: P0DT0H0M0S}
+          end: !<asdf://weldx.bam.de/weldx/tags/time/timedelta-1.0.0> {value: P0DT0H0M20S}
+          min: !<asdf://weldx.bam.de/weldx/tags/time/timedelta-1.0.0> {value: P0DT0H0M0S}
+          max: !<asdf://weldx.bam.de/weldx/tags/time/timedelta-1.0.0> {value: P0DT0H0M20S}
+        orientations: !<asdf://weldx.bam.de/weldx/tags/core/variable-1.0.0>
           name: orientations
           dimensions: [time, c, v]
           dtype: <f8
@@ -97,22 +97,22 @@ properties:
   reference_time:
     description: |
       A timestamp that serves as reference point for the time deltas of the 'time' tag.
-    tag: "tag:weldx.bam.de:weldx/time/timestamp-1.0.0"
+    tag: "asdf://weldx.bam.de/weldx/tags/time/timestamp-1.0.0"
   time:
     description: |
       A list of timestamps
-    tag: "tag:weldx.bam.de:weldx/time/timedeltaindex-1.0.0"
+    tag: "asdf://weldx.bam.de/weldx/tags/time/timedeltaindex-1.0.0"
   coordinates:
     description: |
       An ndarray containing the coordinates.
 
     oneOf:
-      - tag: "tag:weldx.bam.de:weldx/core/variable-1.0.0"
-      - tag: "tag:weldx.bam.de:weldx/core/time_series-1.0.0"
+      - tag: "asdf://weldx.bam.de/weldx/tags/core/variable-1.0.0"
+      - tag: "asdf://weldx.bam.de/weldx/tags/core/time_series-1.0.0"
   orientations:
     description: |
       An ndarray containing the orientations.
-    tag: "tag:weldx.bam.de:weldx/core/variable-1.0.0"
+    tag: "asdf://weldx.bam.de/weldx/tags/core/variable-1.0.0"
 
 wx_shape:
   (coordinates): [..., 3]
