--- a/weldx/asdf/schemas/weldx.bam.de/weldx/groove/iso_9692_1_2013_12/FFGroove-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/groove/iso_9692_1_2013_12/FFGroove-1.0.0.yaml
@@ -1,8 +1,8 @@
 %YAML 1.1
 ---
 $schema: "http://stsci.edu/schemas/yaml-schema/draft-01"
-id: "http://weldx.bam.de/schemas/weldx/groove/iso_9692_1_2013_12/FFGroove-1.0.0"
-tag: "tag:weldx.bam.de:weldx/groove/iso_9692_1_2013_12/FFGroove-1.0.0"
+id: "asdf://weldx.bam.de/weldx/schemas/groove/iso_9692_1_2013_12/FFGroove-1.0.0"
+tag: "asdf://weldx.bam.de/weldx/tags/groove/iso_9692_1_2013_12/FFGroove-1.0.0"
 
 title: |
   FFGroove representation.
@@ -11,13 +11,13 @@ examples:
   -
     - A code 1.12 FF-Groove
     - |
-      !<tag:weldx.bam.de:weldx/groove/iso_9692_1_2013_12/FFGroove-1.0.0>
+      !<asdf://weldx.bam.de/weldx/tags/groove/iso_9692_1_2013_12/FFGroove-1.0.0>
         t_1: !unit/quantity-1.1.0 {unit: millimeter, value: 5}
         code_number: '1.12'
   -
     - A code 3.1.1 FF-Groove
     - |
-      !<tag:weldx.bam.de:weldx/groove/iso_9692_1_2013_12/FFGroove-1.0.0>
+      !<asdf://weldx.bam.de/weldx/tags/groove/iso_9692_1_2013_12/FFGroove-1.0.0>
         t_1: !unit/quantity-1.1.0 {unit: millimeter, value: 5}
         t_2: !unit/quantity-1.1.0 {unit: millimeter, value: 7}
         alpha: !unit/quantity-1.1.0 {unit: degree, value: 80}
@@ -26,7 +26,7 @@ examples:
   -
     - A code 3.1.2 FF-Groove
     - |
-      !<tag:weldx.bam.de:weldx/groove/iso_9692_1_2013_12/FFGroove-1.0.0>
+      !<asdf://weldx.bam.de/weldx/tags/groove/iso_9692_1_2013_12/FFGroove-1.0.0>
         t_1: !unit/quantity-1.1.0 {unit: millimeter, value: 2}
         t_2: !unit/quantity-1.1.0 {unit: millimeter, value: 5}
         b: !unit/quantity-1.1.0 {unit: millimeter, value: 1}
@@ -34,7 +34,7 @@ examples:
   -
     - A code 3.1.3 FF-Groove
     - |
-      !<tag:weldx.bam.de:weldx/groove/iso_9692_1_2013_12/FFGroove-1.0.0>
+      !<asdf://weldx.bam.de/weldx/tags/groove/iso_9692_1_2013_12/FFGroove-1.0.0>
         t_1: !unit/quantity-1.1.0 {unit: millimeter, value: 2}
         t_2: !unit/quantity-1.1.0 {unit: millimeter, value: 5}
         alpha: !unit/quantity-1.1.0 {unit: degree, value: 80}
@@ -43,7 +43,7 @@ examples:
   -
     - A code 4.1.2 FF-Groove
     - |
-      !<tag:weldx.bam.de:weldx/groove/iso_9692_1_2013_12/FFGroove-1.0.0>
+      !<asdf://weldx.bam.de/weldx/tags/groove/iso_9692_1_2013_12/FFGroove-1.0.0>
         t_1: !unit/quantity-1.1.0 {unit: millimeter, value: 2}
         t_2: !unit/quantity-1.1.0 {unit: millimeter, value: 5}
         alpha: !unit/quantity-1.1.0 {unit: degree, value: 80}
@@ -52,7 +52,7 @@ examples:
   -
     - A code 4.1.3 FF-Groove
     - |
-      !<tag:weldx.bam.de:weldx/groove/iso_9692_1_2013_12/FFGroove-1.0.0>
+      !<asdf://weldx.bam.de/weldx/tags/groove/iso_9692_1_2013_12/FFGroove-1.0.0>
         t_1: !unit/quantity-1.1.0 {unit: millimeter, value: 2}
         t_2: !unit/quantity-1.1.0 {unit: millimeter, value: 5}
         b: !unit/quantity-1.1.0 {unit: millimeter, value: 1}
