--- a/weldx/asdf/schemas/weldx.bam.de/weldx/groove/iso_9692_1_2013_12/HUGroove-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/groove/iso_9692_1_2013_12/HUGroove-1.0.0.yaml
@@ -1,8 +1,8 @@
 %YAML 1.1
 ---
 $schema: "http://stsci.edu/schemas/yaml-schema/draft-01"
-id: "http://weldx.bam.de/schemas/weldx/groove/iso_9692_1_2013_12/HUGroove-1.0.0"
-tag: "tag:weldx.bam.de:weldx/groove/iso_9692_1_2013_12/HUGroove-1.0.0"
+id: "asdf://weldx.bam.de/weldx/schemas/groove/iso_9692_1_2013_12/HUGroove-1.0.0"
+tag: "asdf://weldx.bam.de/weldx/tags/groove/iso_9692_1_2013_12/HUGroove-1.0.0"
 
 title: |
   HUGroove representation.
@@ -11,7 +11,7 @@ examples:
   -
     - A simple HU-Groove
     - |
-      !<tag:weldx.bam.de:weldx/groove/iso_9692_1_2013_12/HUGroove-1.0.0>
+      !<asdf://weldx.bam.de/weldx/tags/groove/iso_9692_1_2013_12/HUGroove-1.0.0>
         t: !unit/quantity-1.1.0 {unit: millimeter, value: 18}
         beta: !unit/quantity-1.1.0 {unit: degree, value: 15}
         R: !unit/quantity-1.1.0 {unit: millimeter, value: 8}
