--- a/weldx/asdf/schemas/weldx.bam.de/weldx/time/datetimeindex-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/time/datetimeindex-1.0.0.yaml
@@ -1,8 +1,8 @@
 %YAML 1.1
 ---
 $schema: "http://stsci.edu/schemas/yaml-schema/draft-01"
-id: "http://weldx.bam.de/schemas/weldx/time/datetimeindex-1.0.0"
-tag: "tag:weldx.bam.de:weldx/time/datetimeindex-1.0.0"
+id: "asdf://weldx.bam.de/weldx/schemas/time/datetimeindex-1.0.0"
+tag: "asdf://weldx.bam.de/weldx/tags/time/datetimeindex-1.0.0"
 
 title: |
   Represents an array of timestamps following pandas.DatetimeIndex.
@@ -11,12 +11,12 @@ examples:
   -
     - A regular datetimeindex starting at 2020-01-01 and a 1 day interval till 2020-01-06
     - |
-      !<tag:weldx.bam.de:weldx/time/datetimeindex-1.0.0>
-        start: !<tag:weldx.bam.de:weldx/time/timestamp-1.0.0> {value: '2020-01-01T00:00:00'}
-        end: !<tag:weldx.bam.de:weldx/time/timestamp-1.0.0> {value: '2020-01-05T00:00:00'}
+      !<asdf://weldx.bam.de/weldx/tags/time/datetimeindex-1.0.0>
+        start: !<asdf://weldx.bam.de/weldx/tags/time/timestamp-1.0.0> {value: '2020-01-01T00:00:00'}
+        end: !<asdf://weldx.bam.de/weldx/tags/time/timestamp-1.0.0> {value: '2020-01-05T00:00:00'}
         freq: D
-        min: !<tag:weldx.bam.de:weldx/time/timestamp-1.0.0> {value: '2020-01-01T00:00:00'}
-        max: !<tag:weldx.bam.de:weldx/time/timestamp-1.0.0> {value: '2020-01-05T00:00:00'}
+        min: !<asdf://weldx.bam.de/weldx/tags/time/timestamp-1.0.0> {value: '2020-01-01T00:00:00'}
+        max: !<asdf://weldx.bam.de/weldx/tags/time/timestamp-1.0.0> {value: '2020-01-05T00:00:00'}
 
 definitions:
   values:
