--- a/weldx/asdf/schemas/weldx.bam.de/weldx/unit/dimension-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/unit/dimension-1.0.0.yaml
@@ -1,8 +1,8 @@
 %YAML 1.1
 ---
 $schema: "http://stsci.edu/schemas/yaml-schema/draft-01"
-id: "http://weldx.bam.de/schemas/weldx/unit/dimension-1.0.0"
-tag: "tag:weldx.bam.de:weldx/unit/dimension-1.0.0"
+id: "asdf://weldx.bam.de/weldx/schemas/unit/dimension-1.0.0"
+tag: "asdf://weldx.bam.de/weldx/tags/unit/dimension-1.0.0"
 
 title: |
   Describes the dimension of a quantity.
