--- a/setup.cfg
+++ b/setup.cfg
@@ -141,12 +141,11 @@ show_error_context = True
 show_error_codes = True
 show_column_numbers = True
 
-[mypy-weldx.asdf.*,weldx.tests.*]
+[mypy-weldx.asdf.*]
 ignore_errors = True
-
-# fix current errors, remove module from ignore list, repeat
-[mypy-weldx.welding.*]
+[mypy-weldx.tests.*]
 ignore_errors = True
+# remove after refactoring the geometry module
 [mypy-weldx.geometry.*]
 ignore_errors = True
 
