--- a/setup.cfg
+++ b/setup.cfg
@@ -129,3 +129,30 @@ exclude_lines =
     def __repr__
     def __str__
     def _ipython_display_
+
+[mypy]
+python_version = 3.9
+
+files=weldx
+ignore_missing_imports = True
+strict_optional = False
+pretty = True
+allow_redefinition = True
+show_error_context = True
+show_error_codes = True
+show_column_numbers = True
+
+[mypy-weldx.asdf.*]
+ignore_errors = True
+[mypy-weldx.tests.*]
+ignore_errors = True
+# remove after refactoring the geometry module
+[mypy-weldx.geometry.*]
+ignore_errors = True
+
+# this is a workaround for an xarray related mypy bug
+# see https://github.com/python/mypy/pull/9495
+# and https://github.com/space-physics/msise00/commit/8b59a9383dd6fcc54b7dac74eb95a350308d7b62
+[mypy-xarray]
+follow_imports = skip
+ignore_errors = True
