--- a/setup.cfg
+++ b/setup.cfg
@@ -67,6 +67,7 @@ test =
 asdf_extensions =
     weldx = weldx.asdf.extension:WeldxExtension
     weldx-asdf = weldx.asdf.extension:WeldxAsdfExtension
+    weldx-api = weldx.asdf.extension_api:get_extensions
 
 console_scripts =
     welding_schema = weldx.asdf.cli.welding_schema:main
