--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -68,7 +68,7 @@ jobs:
       - name: test with WeldxFile
         if: (matrix.os == 'ubuntu-latest') && (matrix.py == '3.8')
         run: |
-          - pytest -n2 --dist loadfile --weldx-file-rw-buffer --weldx-file-rw-buffer-disp-header
+          pytest -n2 --dist loadfile --weldx-file-rw-buffer --weldx-file-rw-buffer-disp-header
 
       - name: coverage xml (combination is performed by pytest-cov)
         if: (matrix.os == 'ubuntu-latest') && (matrix.py == '3.8')
