--- a/setup.cfg
+++ b/setup.cfg
@@ -65,8 +65,8 @@ test =
 
 [options.entry_points]
 asdf_extensions =
-    weldx = weldx.asdf.extension:WeldxExtension
-    weldx-asdf = weldx.asdf.extension:WeldxAsdfExtension
+    weldx = weldx.asdf._extension:WeldxExtension
+    weldx-asdf = weldx.asdf._extension:WeldxAsdfExtension
     weldx-api = weldx.asdf.extension_api:get_extensions
 
 console_scripts =
