refactor new extension file

--- a/setup.cfg
+++ b/setup.cfg
@@ -67,7 +67,7 @@ test =
 asdf_extensions =
     weldx = weldx.asdf._extension:WeldxExtension
     weldx-asdf = weldx.asdf._extension:WeldxAsdfExtension
-    weldx-api = weldx.asdf.extension_api:get_extensions
+    weldx-api = weldx.asdf.extension:get_extensions
 
 console_scripts =
     welding_schema = weldx.asdf.cli.welding_schema:main
