--- a/weldx/asdf/schemas/weldx.bam.de/weldx/debug/test_shape_validator-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/debug/test_shape_validator-1.0.0.yaml
@@ -2,7 +2,7 @@
 ---
 $schema: "http://stsci.edu/schemas/yaml-schema/draft-01"
 id: "asdf://weldx.bam.de/weldx/schemas/debug/test_shape_validator-1.0.0"
-tag: "asdf://weldx.bam.de/weldx/tags/debug/test_shape_validator-1.0.0"
+#tag: "asdf://weldx.bam.de/weldx/tags/debug/test_shape_validator-1.0.0"
 
 title: |
   simple demonstration and test schema for wx_shape validator syntax
