--- a/weldx/asdf/schemas/weldx.bam.de/weldx/groove/iso_9692_1_2013_12/HUGroove-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/groove/iso_9692_1_2013_12/HUGroove-1.0.0.yaml
@@ -2,7 +2,7 @@
 ---
 $schema: "http://stsci.edu/schemas/yaml-schema/draft-01"
 id: "asdf://weldx.bam.de/weldx/schemas/groove/iso_9692_1_2013_12/HUGroove-1.0.0"
-tag: "asdf://weldx.bam.de/weldx/tags/groove/iso_9692_1_2013_12/HUGroove-1.0.0"
+#tag: "asdf://weldx.bam.de/weldx/tags/groove/iso_9692_1_2013_12/HUGroove-1.0.0"
 
 title: |
   HUGroove representation.
