--- a/weldx/asdf/schemas/weldx.bam.de/weldx/process/CLOOS/spray_arc-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/process/CLOOS/spray_arc-1.0.0.yaml
@@ -2,7 +2,7 @@
 ---
 $schema: "http://stsci.edu/schemas/yaml-schema/draft-01"
 id: "asdf://weldx.bam.de/weldx/schemas/process/CLOOS/spray_arc-1.0.0"
-tag: "asdf://weldx.bam.de/weldx/tags/process/CLOOS/spray_arc-1.0.0"
+#tag: "asdf://weldx.bam.de/weldx/tags/process/CLOOS/spray_arc-1.0.0"
 
 title: |
   CLOOS spray arc process.
