--- a/weldx/asdf/schemas/weldx.bam.de/weldx/measurement/signal_transformation-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/measurement/signal_transformation-1.0.0.yaml
@@ -40,11 +40,11 @@ properties:
   error:
     description: |
       The error caused by the transformation
-    tag: "asdf://weldx.bam.de/weldx/tags/measurement/error-1.0.0"
+    tag: "asdf://weldx.bam.de/weldx/tags/measurement/error-1.*"
   func:
     description: |
       A mathematical expression that describes the relation between the values of the output and input signal
-    tag: "asdf://weldx.bam.de/weldx/tags/core/mathematical_expression-1.0.0"
+    tag: "asdf://weldx.bam.de/weldx/tags/core/mathematical_expression-1.*"
   type_transformation:
     description: |
       A string of length 2 containing an arbitrary combination of the letters A (for analog) and D (for digital). The
