--- a/weldx/asdf/schemas/weldx.bam.de/weldx/measurement/source-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/measurement/source-1.0.0.yaml
@@ -28,11 +28,15 @@ properties:
   output_signal:
     description: |
       The signal that is produced by the source.
-    tag: "asdf://weldx.bam.de/weldx/tags/measurement/signal-1.0.0"
+    oneOf:
+      - tag: "asdf://weldx.bam.de/weldx/tags/measurement/signal-1.*"
+      - tag: "tag:weldx.bam.de:weldx/measurement/signal-1.*"
   error:
     description: |
       The error of the source.
-    tag: "asdf://weldx.bam.de/weldx/tags/measurement/error-1.0.0"
+    oneOf:
+      - tag: "asdf://weldx.bam.de/weldx/tags/measurement/error-1.*"
+      - tag: "tag:weldx.bam.de:weldx/measurement/error-1.*"
 
 required: [name, output_signal]
 propertyOrder: [name, output_signal, error]
